--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" href="queries.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Avaleht</title>
   </head>
@@ -15,6 +16,12 @@
         </div>
         <div class="header-image"></div>
         <nav>
+          <input id="hamburger" type="checkbox" class="hamburger" />
+          <label class="hamburger-icon" for="hamburger">
+            <div class="line upper-line"></div>
+            <div class="line middle-line"></div>
+            <div class="line lower-line"></div>
+          </label>
           <ul>
             <li><a href="index.html">Avaleht</a></li>
             <li><a href="gallery.html">Galerii</a></li>
@@ -44,8 +51,6 @@
           <div class="contact-info__right">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2093.5604573368637!2d26.712132216151904!3d58.35021649617709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eb3747e8c9e947%3A0xcbc461423c9d99c8!2sKopli%201a%2C%2050115%20Tartu!5e0!3m2!1set!2see!4v1599203136826!5m2!1set!2see"
-              width="600"
-              height="450"
               frameborder="0"
               style="border: 0"
               allowfullscreen=""
