--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" href="queries.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sisse logimine</title>
   </head>
@@ -15,6 +16,12 @@
         </div>
         <div class="header-image"></div>
         <nav>
+          <input id="hamburger" type="checkbox" class="hamburger" />
+          <label class="hamburger-icon" for="hamburger">
+            <div class="line upper-line"></div>
+            <div class="line middle-line"></div>
+            <div class="line lower-line"></div>
+          </label>
           <ul>
             <li><a href="index.html">Avaleht</a></li>
             <li><a href="gallery.html">Galerii</a></li>
